[gd_scene load_steps=4 format=3 uid="uid://drmlqq26s7qq0"]

[ext_resource type="Script" path="res://Menus/start_menu.gd" id="1_3fry5"]
[ext_resource type="Texture2D" uid="uid://cbs8vt828llr0" path="res://Textures/Tileset/Battery.png" id="2_k7old"]
[ext_resource type="Texture2D" uid="uid://b0x2uvog4fr5x" path="res://Textures/Tileset/Basetile.png" id="2_rtxdv"]

[node name="Start_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3fry5")
start_game = "res://Scenes/backrooms_1.tscn"

[node name="Basetile" type="Sprite2D" parent="."]
position = Vector2(-281.25, 1)
scale = Vector2(0.483205, 1)
texture = ExtResource("2_rtxdv")
region_enabled = true
region_rect = Rect2(-1107.95, -543.026, 1429.8, 788.913)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 125.0
offset_bottom = 129.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Stettings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit Game"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(63, 17)

[node name="Battery" type="Sprite2D" parent="."]
position = Vector2(63, -117)
texture = ExtResource("2_k7old")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = -20.0
offset_top = -244.0
offset_right = 157.0
offset_bottom = -198.0
scale = Vector2(2, 2)
text = "Interjacent"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Stettings" to="." method="_on_stettings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
